test/libsolidity/syntaxTests/inlineAssembly/assignment_to_opcode_like.sol
contract C {
    function f() public pure {
        uint mload;
        assembly {
            mload := 1
        }
    }
}
// ----
// ParserError 2314: (101-103): Expected '(' but got ':='
